# BIFET

./: AUTHORS  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_heavy_simple.cc  example_light_ADxx.cc  example_light_ADxx.ipynb  example_light_DEL.cc  example_light_DEL.ipynb  example_light_Dqq.cc  example_light_Dxx.cc  example_light_Dxx.ipynb  example_light_EL.cc  example_light_EL.ipynb
include/: advection.h  diffusion.h  frame.h  growth.h  namespace_toolkit.h  param.h  propagator.h  simbox.h  solution.h  source.h  system.h  timer.h  tinyxml2.h
source/advection/: advection.cc
source/diffusion/: diffusion.cc
source/frame/: dgframe.cc  dgframe_spatial.cc  dgframe_spectral.cc  frame.cc  frame_freespatial.cc  frame_freespectral.cc  frame_spatial.cc  frame_spectral.cc
source/growth/: growth.cc
source/main/: bifet.cc  bifet_profile.cc
source/propagator/: propagator.cc
source/simbox/: simbox.cc
source/solution/: solution.cc
source/source/: source.cc
source/system/: system.cc
tests/: CMakeLists.txt  advection_tests.cc  diffusion_tests.cc  frame_tests.cc  propagator_tests.cc  simbox_tests.cc  solution_tests.cc  system_tests.cc  toolkit_tests.cc
