SET(_Dxx example_light_Dxx.cc)
SET(_Dqq example_light_Dqq.cc)
SET(_EL example_light_EL.cc)
SET(_ADxx example_light_ADxx.cc)
SET(_DEL example_light_DEL.cc)

FOREACH(_t ${_Dxx})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_Dqq})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_EL})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_ADxx})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_DEL})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
ENDFOREACH()