SET(_toolkit_tests toolkit_tests.cc)
SET(_advection_tests advection_tests.cc)
SET(_diffusion_tests diffusion_tests.cc)
SET(_frame_tests frame_tests.cc)
SET(_simbox_tests simbox_tests.cc)
SET(_solution_tests solution_tests.cc)
SET(_system_tests system_tests.cc)
SET(_propagator_tests propagator_tests.cc)


FOREACH(_t ${_toolkit_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_advection_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_diffusion_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_frame_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_simbox_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_solution_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_system_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_propagator_tests})
  	ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES} ${SOURCES})
  	TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${GTEST_INCLUDE_DIRS} ${CAFE_INCLUDE})
  	TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT})
	DEAL_II_SETUP_TARGET(${_t}_exe)
  	ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()